--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,22 +1,29 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
-            "name": "Launch Chrome",
-            "request": "launch",
-            "type": "pwa-chrome",
-            "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}"
-        },
-        {
-            "type": "pwa-chrome",
-            "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}"
-        }
+      {
+        "type": "node",
+        "request": "launch",
+        "name": "Node",
+        "port": 9229,
+        "protocol": "inspector",
+        "runtimeExecutable": "npm",
+        "runtimeArgs": ["run-script", "start"],
+        "console": "integratedTerminal"
+      },
+      {
+        "type": "chrome",
+        "request": "launch",
+        "name": "Chrome",
+        "url": "http://localhost:3000",
+        "webRoot": "${workspaceRoot}",
+        "sourceMaps": true
+      }
+    ],
+    "compounds": [
+      {
+        "name": "Full-stack",
+        "configurations": ["Node", "Chrome"]
+      }
     ]
-}
+  }
